client/src/app/components/layout/play/play-page/play-page.component.scss
@import "../../../../../styles.scss";

:host {
    display: flex;
    flex-direction: column;
    align-items: center;

    width: 100%;
    box-sizing: border-box;
}

.main {
    display: flex;
    flex-direction: column;
    align-items: center;
    
    width: 65%;
    max-width: 1000px;
    gap: 30px;
    box-sizing: border-box;
}

@media screen and (max-width: 1200px) {
    .main {
        width: 100%;
        padding-inline: 40px;
    }
}

.header {
    font-family: $main-font;
    font-size: 20px;
    font-weight: 700;
    margin-bottom: 0;
}

section.profile {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 50px;
}

.league-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.quest-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 7px;
}

.quest-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 3px;
}

.quest-header h1 {
    font-family: $main-font;
    font-size: 12px;
    font-weight: 700;
    margin: 0;
}

.quest-header app-solid-button {
    transform: scale(0.85);
}

app-quest {
    transition: all 0.2s;
}

app-quest:hover {
    opacity: 0.9;
    transform: scale(1.01);
}

.mode-select {
    width: 100%;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.mode-select .label {
    font-family: $main-font;
    font-size: 16px;
    font-weight: 600;
    margin: 0;
}

.mode {
    width: 100%;
    box-sizing: border-box;
    background-color: $dark-color;
    border-style: solid;
    border-width: 2px;
    border-radius: 10px;
    
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 130px;

    cursor: pointer;

    opacity: 0.9;
    transition: transform 0.2s, filter 0.2s, box-shadow 0.2s, opacity 0.2s;
}

.mode:hover {
    transform: scale(1.02);
    filter: brightness(1.3) contrast(1.05);
    box-shadow: 0px 0px 6px 0px rgba(255,255,255,0.3);
    opacity: 1;

    animation: shake 0.35s;
    animation-delay: 0.05s;
    animation-iteration-count: 1;
}

.mode.ranked:hover {
    filter: brightness(1.15) contrast(1.025);
}

.mode:active {
    transform: scale(1.04);
    filter: brightness(1.4) contrast(1.2);
    box-shadow: 0px 0px 6px 0px rgba(255,255,255,0.3);
}

.mode.disabled {
    opacity: 0.4;
    pointer-events: none;
}

.mode-disabled {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 20px;
}

.mode-disabled p {
    font-family: $main-font;
    font-size: 16px;
    font-weight: 600;
    margin: 0;
    padding: 0;

    width: 180px;
    text-align: center;
    text-wrap: pretty;
}

app-locked-icon {
    zoom: 0.8;
    margin-right: 25px;
}

@keyframes shake {
    0% { transform: rotate(0deg) scale(1.02); }
    25% { transform: rotate(0.3deg) scale(1.02); }
    50% { transform: rotate(0eg) scale(1.02); }
    75% { transform: rotate(-0.3deg) scale(1.02); }
    100% { transform: rotate(0deg) scale(1.02); }
}

.mode .left, .mode .right {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 12px;
    height: 100%;
    padding-inline: 12px;
}

.text {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0px;
}

.text h1 {
    font-family: $main-font;
    font-weight: 700;
    font-size: 40px;
    margin: 0;
}

.text p {
    font-family: $main-font;
    font-weight: 600;
    font-size: 16px;
    margin: 0;
    text-wrap: nowrap;
}

.leaderboard {
    display: flex;
    flex-direction: column;
    gap: 4px;
    width: 300px;
}

.leaderboard .row {
    width: 100%;
    height: 30px;
    box-sizing: border-box;
}

.row-content {
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    border-width: 1.5px;
    border-style: solid;
    border-radius: 5px;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-inline: 5px;

    opacity: 0.5;
}

.row-content.me {
    opacity: 1;
    filter: brightness(1.2);
    box-shadow: 0px 0px 4px 0px rgba(255,255,255,0.3);
}

.row-left {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 5px;
}

.row-left p {
    font-family: $main-font;
    font-weight: 700;
    font-size: 13px;
    margin: 0;
}



.border-color.solo {
    border-color: $highest-score-color;
}
.border-color.ranked {
    border-color: $ranked-color;
}
.border-color.puzzles {
    border-color: $puzzle-color;
}
.background-color.solo {
    background-color: adjust-color($color: $highest-score-color, $alpha: -0.8);
}
.background-color.ranked {
    background-color: adjust-color($color: $ranked-color, $alpha: -0.8);
}
.background-color.puzzles {
    background-color: adjust-color($color: $puzzle-color, $alpha: -0.8);
}
.color.solo, .mode-disabled.solo {
    color: $highest-score-color;
}
.color.ranked, .mode-disabled.ranked {
    color: $ranked-color;
}
.color.puzzles, .mode-disabled.puzzles {
    color: $puzzle-color;
}

@media screen and (max-width: 800px) {
    .leaderboard {
        width: 230px;
    }
}

@media screen and (max-width: 550px) {
    .leaderboard {
        display: none;
    }

    app-locked-icon {
        display: none;
    }
}

@media screen and (max-width: 520px) {
    .profile {
        zoom: 0.8;
    }
}

@media screen and (max-width: 410px) {
    .profile {
        zoom: 0.7;
    }
}

@media screen and (max-width: 450px) {
    .mode-disabled p {
        display: none;
    }
}

